# GaussWorldTrader

./: .env.example  README.md  live_script.py  main_cli.py  pyproject.toml  requirements.txt
docs/: PROJECT_STRUCTURE.md
examples/: btc_breakout_example.py  crypto_momentum_example.py  momentum_backtest_example.py  simple_example.py  wheel_strategy_example.py
src/: settings.py
src/account/: account_config.py  account_manager.py  order_manager.py  position_manager.py
src/agent/: __init__.py  agent_manager.py  fundamental_analyzer.py
src/agent/multi_agent/: __init__.py  agents.py  orchestrator.py  types.py
src/backtest/: __init__.py  backtester.py
src/data/: alpaca_provider.py  finnhub_provider.py  fred_provider.py  news_provider.py
src/llm/: __init__.py  providers.py
src/notify/: __init__.py  notification_service.py
src/strategy/: __init__.py  base.py  multi_agent_strategy.py  registry.py
src/strategy/crypto/: __init__.py
src/strategy/option/: vertical_spread.py  wheel.py
src/strategy/stock/: __init__.py  macro_factor.py  mean_reversion.py
src/trade/: __init__.py  portfolio.py
src/trade/engine/: __init__.py  crypto_engine.py  execution.py  option_engine.py  stock_engine.py  trading_engine.py
src/trade/live/: __init__.py  live_runner.py  live_trading_base.py  live_trading_crypto.py  live_trading_option.py  live_trading_stock.py
src/ui/: account_views.py  analysis_views.py  dashboard.py  dashboard_utils.py  market_views.py  trading_views.py  ui_components.py
src/watchlist/: __init__.py  watchlist_manager.py
